# DjangoPython1

./: .env.sample  .gitignore  README.md  catalog_fixture.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_is_published_alter_blog_number_of_views.py  0003_alter_blog_is_published.py
blog/templates/blogs/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  header.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contacts.html  header.html  home.html  product_detail.html
catalog/templates/products/: base.html  contacts.html  header.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
static/style/: style.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html  register.html
users/templates/users/: login.html  register.html
